--- a/practice.css
+++ b/practice.css
@@ -1,22 +1,34 @@
 body{
     background-color: rgb(153, 255, 0);
 }
-div{
-    background-color: blueviolet;
+form{
+    background-color: rgb(65, 6, 120);
     color:white;
     margin-left: -8px;
     margin-right: -8px;
     height: 200px;
 }
-button{
+ #button{
     color:rgb(11, 11, 1);
-    background-color: aqua;
     margin-left: 10px;
+    background-color: yellow;
 }
 label,input {
-    margin-top: 20px;
+    margin-top: 30px;
     margin-left: 10px;
 }
-button:hover{
+#button:hover{
     color:red;
+}
+body>h1{
+    font-size: 80px;
+    color:blue;
+}
+h1{
+    font-size: 40px;
+    color:red;
+}
+#menu{
+    font-size: 30px;
+    color:white;
 }
